2002-09-14  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/pread.c: __NR_pread64 may be defined
	instead of __NR_pread.
	* sysdeps/unix/sysv/linux/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/pwrite.c: __NR_pwrite64 may be defined
	instead of __NR_pwrite.
	* sysdeps/unix/sysv/linux/pwrite64.c: Likewise.

2002-09-13  Roland McGrath  <roland@redhat.com>

	* manual/libc.texinfo: @ifinfo -> @ifnottex around copyright notice.

2002-09-13  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/mips/syscalls.list: Add readahead
	syscall.  Patch by Guido Guenther <agx@sigxcpu.org>.

2002-09-12  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h: Correct DT_LOOS and DT_HIOS values.

2002-09-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/fpu/s_isnan.c: #undef __isnanf and isnanf after
	reading the headers.

2002-09-12  Roland McGrath  <roland@redhat.com>

	* elf/rtld.c (_dl_start_final): Move _begin, _end decls outside the fn.
	(_dl_start) [DONT_USE_BOOTSTRAP_MAP]: Use &_begin instead of l_addr to
	find the ELF header.

	* elf/rtld.c (dl_main) [USE_TLS]: Adjust l_tls_initimage of main
	executable if needed, in case it's actually a shared object.

2002-09-11  Roland McGrath  <roland@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Use l_addr instead of
	l_map_start to adjust l_tls_initimage.

	* nss/getnssent_r.c (__nss_getent_r): Use EAGAIN instead of errno
	when using h_errno and it's not set to NETDB_INTERNAL.
	* nss/getXXbyYY_r.c [NEED_H_ERRNO]: Likewise.

	* Makefile ($(common-objpfx)testrun.sh): New target.
	(others): Depend on it.
	(postclean-generated): Append it.

	* nss/bug-erange.c: New file.
	* nss/Makefile (tests): Add it.

	* nss/getXXbyYY_r.c (INTERNAL (REENTRANT_NAME)): Return errno
	instead of always EAGAIN when status is NSS_STATUS_TRYAGAIN.

	* sysdeps/generic/dl-environ.c (unsetenv): Redo last fix without
	strncmp, keeps the code smaller for a non-performance-critical case.
